derniere et meilleur version du site team energie

--- a/coureur.html
+++ b/coureur.html
@@ -4,6 +4,7 @@
 	<title>Team Energie/Equipe/Coureur</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="normalize.css">
+		<link rel="stylesheet" type="text/css" href="animate.css">
 		<link rel="stylesheet" type="text/css" href="coureur.css">
 	</head>
 	<body>
