--- a/index1.html
+++ b/index1.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Team Energie Main</title>
+	<title>Team Energie FLEX</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="normalize.css">
+		<link rel="stylesheet" type="text/css" href="animate.css">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat|Nunito" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="style1.css">
 	</head>
 	<body>
+							<div class=positionFixe>
+								<h5>Partager</h5>
+								<a href="#"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 50 50" enable-background="new 0 0 50 50" xml:space="preserve"><g><path d="M23.853,4.181c-1.685,0.914-2.865,2.136-3.512,3.635c-0.605,1.409-0.901,3.403-0.901,6.108v0.92h-4.358   v8.799h4.358v23.489h10.472V23.644h5.865v-8.799h-5.865v-0.781c0-1.695,0.348-2.121,0.391-2.167   c0.225-0.242,0.753-0.375,1.482-0.375c1.041,0,2.151,0.136,3.298,0.411l1.329,0.317l1.546-7.968l-1.12-0.353   C32.299,2.503,27.06,2.441,23.853,4.181z M34.347,9.112c-2.477-0.403-4.812-0.247-5.971,1.001   c-0.736,0.788-1.093,2.079-1.093,3.949v3.407h5.868v3.55h-5.868v23.492H22.06V21.02h-4.356v-3.55h4.356v-3.546   c0-2.305,0.231-4.011,0.688-5.067c0.415-0.961,1.184-1.733,2.354-2.37c2.297-1.247,6.286-1.267,9.828-0.374L34.347,9.112z"></path></g></svg></a>
+								<a href="#"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 50 50" enable-background="new 0 0 50 50" xml:space="preserve"><g><path d="M45.88,11.416c0.327-1.106-0.047-2.302-0.953-3.022c-0.514-0.411-1.136-0.618-1.767-0.618   c-0.498,0-0.996,0.13-1.443,0.397c-0.888,0.521-1.817,0.939-2.787,1.234c-1.854-1.418-4.153-2.207-6.516-2.207   c-5.416,0-9.903,4.04-10.61,9.264c-4.318-0.924-8.252-3.303-11.086-6.779c-0.54-0.666-1.35-1.046-2.196-1.046   c-0.071,0-0.146,0.005-0.222,0.01c-0.928,0.073-1.757,0.596-2.226,1.398c-0.952,1.631-1.453,3.491-1.453,5.386   c0,1.28,0.227,2.525,0.647,3.688c-0.452,0.514-0.714,1.18-0.714,1.884c0,2.808,1.06,5.39,2.826,7.33   c-0.109,0.484-0.092,0.996,0.067,1.486c0.611,1.914,1.729,3.561,3.175,4.818c-0.939,0.213-1.911,0.322-2.897,0.322   c-0.511,0-1.028-0.033-1.549-0.092c-0.11-0.014-0.22-0.021-0.332-0.021c-1.186,0-2.26,0.742-2.663,1.885   c-0.447,1.24,0.026,2.627,1.134,3.34c4.071,2.607,8.775,3.986,13.602,3.986c15.655,0,25.063-12.6,25.232-24.899   c1.274-1.085,2.394-2.334,3.344-3.728c0.359-0.474,0.572-1.063,0.572-1.708C47.065,12.775,46.597,11.933,45.88,11.416z    M40.292,17.801c0.018,0.337,0.025,0.677,0.025,1.018c0,10.404-7.919,22.4-22.4,22.4c-4.445,0-8.584-1.303-12.07-3.537   c0.613,0.068,1.243,0.111,1.878,0.111c3.689,0,7.083-1.26,9.779-3.373c-3.449-0.061-6.354-2.34-7.357-5.467   c0.481,0.092,0.975,0.143,1.478,0.143c0.72,0,1.416-0.098,2.075-0.277c-3.602-0.727-6.317-3.905-6.317-7.723   c0-0.034,0-0.065,0-0.098c1.062,0.588,2.277,0.942,3.567,0.982c-2.112-1.412-3.5-3.824-3.5-6.554c0-1.442,0.388-2.793,1.066-3.956   c3.88,4.763,9.683,7.896,16.227,8.224c-0.136-0.574-0.202-1.178-0.202-1.795c0-4.344,3.524-7.869,7.87-7.869   c2.266,0,4.313,0.956,5.749,2.483c1.791-0.351,3.478-1.006,4.999-1.909c-0.589,1.837-1.838,3.38-3.461,4.354   c1.591-0.188,3.106-0.611,4.52-1.24C43.165,15.305,41.832,16.691,40.292,17.801z"></path></g></svg></a>
+							</div>
+							<a href="#" class="flecheRemontante"></a>
+
 		<header>
 			<div class="container">
-			<a href="index1.HTML"><img src="image/logoDirectEnergie.png"></a>
-					<ul>
-						<li><a href="">Actualités<div class="soulignement"></div></a></li>
-						<li><a href="">Hors-course<div class="soulignement"></div></a></li>
-						<li><a href="">Calendrier<div class="soulignement"></div></a></li>
-						<li><a href="">L'équipe 2017<div class="creaFlecheBas"></div><div class="soulignement"></div></a></li>
-						<li><a href="">Direct Energie<div class="creaFlecheBas"></div><div class="soulignement"></div></a></li>
-						<li><a href="">Galeries photos<div class="soulignement"></div></a></li>
-						<li><a href="">Social live<div class="soulignement"></div></a></li>
-						<li><a href="">Shop<div class="soulignement"></div></a></li>
-						<li><a href="">Partenaires<div class="soulignement"></div></a></li>
-					</ul>
+				<a href="index1.HTML"><img src="image/logoDirectEnergie.png"></a>
+				<ul>
+					<li><a href="">Actualités<div class="soulignement"></div></a></li>
+					<li><a href="">Hors-course<div class="soulignement"></div></a></li>
+					<li><a href="">Calendrier<div class="soulignement"></div></a></li>
+					<li><a href="">L'équipe 2017<div class="creaFlecheBas"></div><div class="soulignement"></div></a></li>
+					<li><a href="">Direct Energie<div class="creaFlecheBas"></div><div class="soulignement"></div></a></li>
+					<li><a href="">Galeries photos<div class="soulignement"></div></a></li>
+					<li><a href="">Social live<div class="soulignement"></div></a></li>
+					<li><a href="">Shop<div class="soulignement"></div></a></li>
+					<li><a href="">Partenaires<div class="soulignement"></div></a></li>
+				</ul>
 			</div>
 		</header>
 		<main>
@@ -29,31 +37,157 @@
 				<div class="container">
 					<div class="barreJaune"></div>
 					<ul>
-						<li><h2>Actualités</h2></li>
+						<li><h1>Actualités</h1></li>
 						<li>Suivez-nous</li>
 						<li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 50 50" enable-background="new 0 0 50 50" xml:space="preserve"><g><path d="M23.853,4.181c-1.685,0.914-2.865,2.136-3.512,3.635c-0.605,1.409-0.901,3.403-0.901,6.108v0.92h-4.358   v8.799h4.358v23.489h10.472V23.644h5.865v-8.799h-5.865v-0.781c0-1.695,0.348-2.121,0.391-2.167   c0.225-0.242,0.753-0.375,1.482-0.375c1.041,0,2.151,0.136,3.298,0.411l1.329,0.317l1.546-7.968l-1.12-0.353   C32.299,2.503,27.06,2.441,23.853,4.181z M34.347,9.112c-2.477-0.403-4.812-0.247-5.971,1.001   c-0.736,0.788-1.093,2.079-1.093,3.949v3.407h5.868v3.55h-5.868v23.492H22.06V21.02h-4.356v-3.55h4.356v-3.546   c0-2.305,0.231-4.011,0.688-5.067c0.415-0.961,1.184-1.733,2.354-2.37c2.297-1.247,6.286-1.267,9.828-0.374L34.347,9.112z"></path></g></svg></a></li>
 						<li><a href="#>"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 50 50" enable-background="new 0 0 50 50" xml:space="preserve"><g><path d="M45.88,11.416c0.327-1.106-0.047-2.302-0.953-3.022c-0.514-0.411-1.136-0.618-1.767-0.618   c-0.498,0-0.996,0.13-1.443,0.397c-0.888,0.521-1.817,0.939-2.787,1.234c-1.854-1.418-4.153-2.207-6.516-2.207   c-5.416,0-9.903,4.04-10.61,9.264c-4.318-0.924-8.252-3.303-11.086-6.779c-0.54-0.666-1.35-1.046-2.196-1.046   c-0.071,0-0.146,0.005-0.222,0.01c-0.928,0.073-1.757,0.596-2.226,1.398c-0.952,1.631-1.453,3.491-1.453,5.386   c0,1.28,0.227,2.525,0.647,3.688c-0.452,0.514-0.714,1.18-0.714,1.884c0,2.808,1.06,5.39,2.826,7.33   c-0.109,0.484-0.092,0.996,0.067,1.486c0.611,1.914,1.729,3.561,3.175,4.818c-0.939,0.213-1.911,0.322-2.897,0.322   c-0.511,0-1.028-0.033-1.549-0.092c-0.11-0.014-0.22-0.021-0.332-0.021c-1.186,0-2.26,0.742-2.663,1.885   c-0.447,1.24,0.026,2.627,1.134,3.34c4.071,2.607,8.775,3.986,13.602,3.986c15.655,0,25.063-12.6,25.232-24.899   c1.274-1.085,2.394-2.334,3.344-3.728c0.359-0.474,0.572-1.063,0.572-1.708C47.065,12.775,46.597,11.933,45.88,11.416z    M40.292,17.801c0.018,0.337,0.025,0.677,0.025,1.018c0,10.404-7.919,22.4-22.4,22.4c-4.445,0-8.584-1.303-12.07-3.537   c0.613,0.068,1.243,0.111,1.878,0.111c3.689,0,7.083-1.26,9.779-3.373c-3.449-0.061-6.354-2.34-7.357-5.467   c0.481,0.092,0.975,0.143,1.478,0.143c0.72,0,1.416-0.098,2.075-0.277c-3.602-0.727-6.317-3.905-6.317-7.723   c0-0.034,0-0.065,0-0.098c1.062,0.588,2.277,0.942,3.567,0.982c-2.112-1.412-3.5-3.824-3.5-6.554c0-1.442,0.388-2.793,1.066-3.956   c3.88,4.763,9.683,7.896,16.227,8.224c-0.136-0.574-0.202-1.178-0.202-1.795c0-4.344,3.524-7.869,7.87-7.869   c2.266,0,4.313,0.956,5.749,2.483c1.791-0.351,3.478-1.006,4.999-1.909c-0.589,1.837-1.838,3.38-3.461,4.354   c1.591-0.188,3.106-0.611,4.52-1.24C43.165,15.305,41.832,16.691,40.292,17.801z"></path></g></svg></a></li>
 						<li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve"><g><path d="M70.9,16.4H29.1c-7,0-12.7,5.7-12.7,12.7v41.9c0,7,5.7,12.7,12.7,12.7h41.9c7,0,12.7-5.7,12.7-12.7V29.1   C83.6,22.1,77.9,16.4,70.9,16.4z M29.1,19.2h41.9c5.4,0,9.9,4.4,9.9,9.9v12.5h-14v0.4c-3.7-5.3-9.9-8.8-16.8-8.8   c-6.9,0-13,3.4-16.8,8.7v-0.3h-14V29.1C19.2,23.6,23.6,19.2,29.1,19.2z M50,36c9.8,0,17.7,7.9,17.7,17.7S59.8,71.4,50,71.4   s-17.7-7.9-17.7-17.7S40.2,36,50,36z M70.9,80.8H29.1c-5.4,0-9.9-4.4-9.9-9.9V44.3h12.5c-1.4,2.8-2.3,6-2.3,9.3   c0,11.3,9.2,20.5,20.5,20.5S70.5,65,70.5,53.7c0-3.4-0.8-6.5-2.3-9.3h12.5v26.6C80.8,76.4,76.4,80.8,70.9,80.8z"></path><path d="M50,67.2c7.1,0,12.8-5.8,12.8-12.8S57.1,41.5,50,41.5s-12.8,5.8-12.8,12.8S42.9,67.2,50,67.2z M50,44.3   c5.5,0,10,4.5,10,10s-4.5,10-10,10s-10-4.5-10-10S44.5,44.3,50,44.3z"></path><path d="M66,36.3h6.3c2,0,3.7-1.7,3.7-3.7v-6.3c0-2-1.7-3.7-3.7-3.7H66c-2,0-3.7,1.7-3.7,3.7v6.3   C62.3,34.6,64,36.3,66,36.3z M64.2,26.3c0-1,0.8-1.8,1.8-1.8h6.3c1,0,1.8,0.8,1.8,1.8v6.3c0,1-0.8,1.8-1.8,1.8H66   c-1,0-1.8-0.8-1.8-1.8V26.3z"></path></g></svg></a></li>
 					</ul>
-					
-						<article class="fondJaune">
-								<div class="blocGauche"><div class="photo hautGauche"></div><div class="photo hautDroit"></div><div class="photo basGauche"></div><div class="photo basDroit"></div></div>
-								<div class="blocDroit"><div class="photoDeCoquard"></div></div>
-						</article>
+					<article class="fondJaune">
+						<div class="blocGauche">
+							<a href="#" class="photo hautGauche"><div class="fond"><h4>Dorian Foulon :"très fier de porter les couleurs de Direct Energie"</h4></div></a>
+							<a href="#" class="photo hautDroit"><img src="image/camera.jpg"><div class="fond"><h4>Le nouveau camion du Team Direct Energie</h4></div></a>
+							<a href="#" class="photo basGauche"><div class="fond"><h4>Coquard : "une décision diffcile"</h4></div></a>
+							<a href="#" class="photo basDroit"><img src="image/camera.jpg"><div class="fond"><h4>4JDD - Victoire d'Adrien Petit !</h4></div></a>
+						</div>
+						<a href="#" class="blocDroit"><div class="photoDeCoquard"><div class="fond"><img src="image/news.png"><h4>Dauphiné 2017 toutes nos infos</h4></div></div></a>
+					</article>
 				</div>
-				<aside></aside>
 			</section>
-
-
-
-			<section class="test">
+			<section class="equipe">
 				<div class="container">
-				<h1>LEQUIPE</h1>
-			
+					<div class="barreJaune"></div>
+					<a href="#" class="fleche"><div class="flecheJaune"></div><div class="flecheJaune"></div></a>
+	
+					<h1>L'EQUIPE</h1>
+					<ul>
+						<li><a href="#"><img src="image/voeckler.png"><h4>Thomas Voeckler</h4></a></li>
+						<li><a href="#"><img src="image/chavanel.png"><h4>Sylvain Chavanel</h4></a></li>
+						<li><a href="#"><img src="image/coquard2.png"><h4>Bryan Coquard</h4></a></li>
+						<li><a href="#"><img src="image/sicard.png"><h4>Romain Sicard</h4></a></li>
+					</ul>
 				</div>
 			</section>	
+			<section class="background2">
+				<div class="container">
+					<article>
+						<div class="blocGauche">
+							<div class="barreJaune"></div>
+							<h1>Hours-course</h1>
+							<div class="ensemble1">	
+								<a href="#"><div class="carre"><img src="image/micro-picto.png"><h4>Les offs</h4></div></a>
+								<a href="#"><div class="carre"><img src="image/velo-picto.png"><h4>Les velos pour les nuls</h4></div></a>
+								<a href="#"><div class="carre"><img src="image/roue-picto.png"><h4>Tactique et technique</</h4></div></a>
+								<a href="#"><div class="carre"><img src="image/roue-picto.png"><h4>Santé et nutrition</h4></div></a>
+							</div>
+						</div>
+						<div class="blocDroit">
+							<div class="barreJaune"></div>
+							<h1>Direct Energie</h1>
+							<div class="ensemble2">	
+								<a href="#" class="carre"><img src="image/	play_video.png"><div class="fond"><h4>Présentation du critérium 2017</h4><p>Thomas Voeckler et Lilian Calmejane nous parlent de la 69ème édition du critérium</p></div></a>
+								<a href="#" class="carre"><img src="image/	play_video.png"><div class="fond"><h4>Tactique et technique - Le nouveau Camion Atelier du team Den</h4></div></a>
+								<a href="#" class="carre"><img src="image/	play_video.png"><div class="fond"><h4>2017.05.14 En immersion avec le Team DEN - 4JDD #6</h4></div></a>
+								<a href="#" class="carre"><img src="image/	play_video.png"><div class="fond"><h4>2017.05.13 En immersion avec le Team DEN - 4JDD #6</h4></div></a>		
+							</div>
+							<a href="#" class="barreChargement"><h4>Toutes les videos</h4></a>
+						</div>
+					</article>
+				</div>
+			</section>
+			<section class="information">
+				<div class="container">
+					<article>
+						<div class="blocGauche">
+							<div class="barreJaune"></div>
+							<h1>Prochaines Courses</h1>
+							<a href="#" class="gene"><div class="date"><h4>JUIN.</h4><h3>Jour</h3></div><div class="info"><img src="image/france.png"><h3>Boucle de la Mayenne</h3></div></a>
+							<a href="#" class="gene"><div class="date"><h4>JUIN.</h4><h3>Jour</h3></div><div class="info"><img src="image/france.png"><h3>Boucle de la Mayenne</h3></div></a>
+							<a href="#" class="gene"><div class="date"><h4>JUIN.</h4><h3>Jour</h3></div><div class="info"><img src="image/france.png"><h3>Boucle de la Mayenne</h3></div></a>
+							<a href="#" class="gene"><div class="date"><h4>JUIN.</h4><h3>Jour</h3></div><div class="info"><img src="image/france.png"><h3>Boucle de la Mayenne</h3></div></a>
+							<a href="#" class="basDeTexte">toutes les courses</a>
+						</div>
+						<div class="blocDroit">
+							<div class="barreJaune"></div>
+							<h1>Zoom sur les 4 jours de Dunkerque</h1>
+							<p>
+								Les Quatre jours de Dunkerque est une course cycliste par étapes organisée dans le Nord. Contrairement à ce que son nom indique, elle se dispute actuellement sur cinq jours . Elle est inscrite au c...
+							</p>
+							<img src="image/zoom-sur-img.png" class="zoom">
+							<a href="#" class="basDeTexte">Découvrir la course</a>
+						</div>
+					</article>
+				</div>
+			</section>
+			<section class="chiffreCles">
+				<div class="container">
+					<article>
+						<div class="haut">
+							<img src="image/logo-direct-energie-min.png"><h3>Partagez la même énergie que vos coureurs favoris !</h3>
+						</div>
+						<div class="bas">
+						<div class="gauche">
+							<p><span>. 2 millions de clients</span> nous ont fait confiance</p>
+							<p><span>. Elu Service Client</span> de l'année 2017</p>
+							<p><span>. Sans engagement</span> & sans frais de départ</p>
+							<p><span>. Souscription 100% en ligne ou par téléphone</span></p>
+						</div>
+						<div class="droite">
+							<p>Jusqu'à 10% d'économies sur vos consommations d'électricité et de gaz</p>
+							<a href="#"><p>Je découvre les offres</p></a>
+						</div>
+					</article>
+				</div>		
+			</section>
+			<section class="pdg">
+				<div class="container">
+					<article>
+						<div class="persoGauche">
+							<img src="image/Jean-Rene-Bernaudeau.png">
+								<div class="detail">
+									<h2>Jean-Rene-Bernaudeau</h2>
+									<h4>Manager du Team Direct Energie</h4>
+									<p>"La passion a toujours raison...</p>
+									<a href="#">Lire la suite</a>
+								</div>
+							</div>
+							<div class="persoDroite">
+								<img src="image/Xavier-Caitucoli.png">
+								<div class="detail">
+								<h2>Xavier-Caitucoli</h2>
+								<h4>PDG de Direct Energie</h4>
+								<p>"Beaucoup de plaisir et de fierté...</p>
+								<a href="#">Lire la suite</a>
+							</div>
+						</div>
+					</article>
+				</div>
+			</section>
+			<footer class="dernierBandeau">
+				<div class="container">
+					<div class="barreJaune"></div>
+					<h1>Réseaux sociaux</h1>
+					<ul>
+						<li>Retrouvez le Team Direct Energie sur les réseaux sociaux :</li>
+						<li><a href=""><img src="image/geo.png"></a></li>
+						<li><a href=""><img src="image/geo.png"></a></li>
+						<li><a href=""><img src="image/geo.png"></a></li>
+						<li><a href=""><img src="image/geo.png"></a></li>
+						<li><a href=""><img src="image/geo.png"></a></li>
+					</ul>
+				</div>
+			</footer>
+			<section class="mention">
+			<div class="container">
+				<h4>Team Direct Energie 2017 Tous les Droits Réservés / Mentions l2gales / Création du site internet</h4>
+			</div>	
+			</section>
+			<section class="fin">
+				<div class="container">
+					<h6>Nous utilisons des cookies pour vous garantir la meilleure expérience sur notre site. Si vous continuez à utiliser ce dernier, nous considérons que vous acceptez l'utilisation des cookies.</h6>
+					<a href="#" class="ok"><h6>Ok</h6></a>
+				</div>	
+			</section>
 		</main>
-		<footer>
-		</footer>
 	</body>
 </html>
